// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSelection should render LoadingIndicator 1`] = `
<div
  className="c-data-selection c-dashboard__content"
>
  <div
    className="qa-data-selection-content"
  >
    <AngularWrapper
      bindings={
        Object {
          "availableFilters": undefined,
          "dataset": "bag",
          "filters": Object {},
          "geometryFilter": Object {},
          "isLoading": true,
          "numberOfRecords": 10,
          "showHeader": false,
          "user": Object {},
          "view": "TABLE",
        }
      }
      component="dpDataSelectionHeader"
      dependencies={
        Array [
          "atlas",
        ]
      }
      interpolateBindings={Object {}}
      moduleName="dpDataSelectionHeaderWrapper"
    />
    <LoadingIndicator />
  </div>
</div>
`;

exports[`DataSelection should render as gesplitst 1`] = `
<div
  className="c-data-selection c-dashboard__content"
>
  <div
    className="qa-data-selection-content"
  >
    <AngularWrapper
      bindings={
        Object {
          "availableFilters": undefined,
          "dataset": "bag",
          "filters": Object {},
          "geometryFilter": Object {},
          "isLoading": false,
          "numberOfRecords": 10,
          "showHeader": true,
          "user": Object {},
          "view": "LIST",
        }
      }
      component="dpDataSelectionHeader"
      dependencies={
        Array [
          "atlas",
        ]
      }
      interpolateBindings={Object {}}
      moduleName="dpDataSelectionHeaderWrapper"
    />
    <Connect(DataSelectionActiveFilters) />
    <div
      className="u-grid qa-data-grid"
    >
      <div
        className="u-row"
      >
        <div
          className="u-col-sm--12"
        >
          <div>
            <AngularWrapper
              bindings={
                Object {
                  "content": undefined,
                }
              }
              component="dpDataSelectionList"
              dependencies={
                Array [
                  "atlas",
                ]
              }
              interpolateBindings={Object {}}
              moduleName="dpDataSelectionListWrapper"
            />
            <AngularWrapper
              bindings={
                Object {
                  "currentPage": 1,
                  "numberOfPages": undefined,
                  "setPage": [Function],
                }
              }
              component="dpDataSelectionPagination"
              dependencies={
                Array [
                  "atlas",
                ]
              }
              interpolateBindings={Object {}}
              moduleName="dpDataSelectionPaginationWrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataSelection should render as volledig 1`] = `
<div
  className="c-data-selection c-dashboard__content"
>
  <div
    className="qa-data-selection-content"
  >
    <AngularWrapper
      bindings={
        Object {
          "availableFilters": undefined,
          "dataset": "bag",
          "filters": Object {},
          "geometryFilter": Object {},
          "isLoading": false,
          "numberOfRecords": 10,
          "showHeader": true,
          "user": Object {},
          "view": "TABLE",
        }
      }
      component="dpDataSelectionHeader"
      dependencies={
        Array [
          "atlas",
        ]
      }
      interpolateBindings={Object {}}
      moduleName="dpDataSelectionHeaderWrapper"
    />
    <Connect(DataSelectionActiveFilters) />
    <div
      className="u-grid qa-data-grid"
    >
      <div
        className="u-row"
      >
        <div
          className="u-col-sm--3 c-data-selection__available-filters"
        >
          <AngularWrapper
            bindings={
              Object {
                "activeFilters": Object {},
                "availableFilters": undefined,
              }
            }
            component="dpDataSelectionAvailableFilters"
            dependencies={
              Array [
                "atlas",
              ]
            }
            interpolateBindings={
              Object {
                "dataset": "bag",
              }
            }
            moduleName="dpDataSelectionAvailableFiltersWrapper"
          />
        </div>
        <div
          className="u-col-sm--9"
        >
          <div>
            <AngularWrapper
              bindings={
                Object {
                  "content": undefined,
                  "dataset": "bag",
                }
              }
              component="dpDataSelectionTable"
              dependencies={
                Array [
                  "atlas",
                ]
              }
              interpolateBindings={Object {}}
              moduleName="dpDataSelectionTableWrapper"
            />
            <AngularWrapper
              bindings={
                Object {
                  "currentPage": 1,
                  "numberOfPages": undefined,
                  "setPage": [Function],
                }
              }
              component="dpDataSelectionPagination"
              dependencies={
                Array [
                  "atlas",
                ]
              }
              interpolateBindings={Object {}}
              moduleName="dpDataSelectionPaginationWrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataSelection should render the container 1`] = `
<div
  className="c-data-selection c-dashboard__content"
>
  <div
    className="qa-data-selection-content"
  >
    <AngularWrapper
      bindings={
        Object {
          "availableFilters": undefined,
          "dataset": "bag",
          "filters": Object {},
          "geometryFilter": Object {
            "markers": Array [],
          },
          "isLoading": false,
          "numberOfRecords": undefined,
          "showHeader": true,
          "user": Object {
            "scopes": Array [],
          },
          "view": "LIST",
        }
      }
      component="dpDataSelectionHeader"
      dependencies={
        Array [
          "atlas",
        ]
      }
      interpolateBindings={Object {}}
      moduleName="dpDataSelectionHeaderWrapper"
    />
    <Connect(DataSelectionActiveFilters) />
    <NoResultsForSearchType
      authMessage={false}
      message="Tip: verwijder een of meer criteria"
    />
    <div
      className="u-grid qa-data-grid"
    >
      <div
        className="u-row"
      >
        <div
          className="u-col-sm--12"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataSelection should show authorization message if user has no permission 1`] = `
<div
  className="c-data-selection c-dashboard__content"
>
  <div
    className="qa-data-selection-content"
  >
    <AngularWrapper
      bindings={
        Object {
          "availableFilters": undefined,
          "dataset": "bag",
          "filters": Object {},
          "geometryFilter": Object {},
          "isLoading": false,
          "numberOfRecords": 10,
          "showHeader": true,
          "user": Object {},
          "view": "TABLE",
        }
      }
      component="dpDataSelectionHeader"
      dependencies={
        Array [
          "atlas",
        ]
      }
      interpolateBindings={Object {}}
      moduleName="dpDataSelectionHeaderWrapper"
    />
    <Connect(DataSelectionActiveFilters) />
    <NotAuthorizedMessage
      scopeError=""
    />
  </div>
</div>
`;
